@@ -84,103 +84,12 @@ let merge_pdfs_renumber names pdfs =
         let table = combine first_names (Pdf.renumber_pdfs first_pdfs) in
           map (function k -> lookup_failnull k table) names
       
-(* Reading a name tree, flattened. FIXME: This appears to be somewhat duplicated in Pdf.ml.
-   Move name / number tree stuff to pdftree.ml *)
-let rec read_name_tree pdf tree =
-  let names =
-    match Pdf.lookup_direct_orelse pdf "/Names" "/Nums" tree with
-    | Some (Pdf.Array elts) ->
-        if odd (length elts)
-          then
-             begin
-               Pdfe.log "Bad /Names array. Name tree will be read as empty\n";
-               []
-             end
-          else pairs_of_list elts
-    | _ -> []
-  in
-    match Pdf.lookup_direct pdf "/Kids" tree with
-    | Some (Pdf.Array kids) ->
-        names @ flatten (map (read_name_tree pdf) kids)
-    | _ -> names
-
-let read_number_tree pdf tree =
-  let r = read_name_tree pdf tree in
-    try
-      map (function (Pdf.Integer i, x) -> (string_of_int i, x) | _ -> raise Exit) r
-    with
-      Exit ->
-        Pdfe.log "Pdfmerge.read_number_tree: skipping malformed name tree\n";
-        []
-
-let read_name_tree pdf tree =
-  let r = read_name_tree pdf tree in
-    try
-      map (function (Pdf.String s, x) -> (s, x) | _ -> raise Exit) r
-    with
-      Exit ->
-        Pdfe.log "Pdfmerge.read_name_tree: skipping malformed name tree\n";
-        []
-
-let maxsize = 10 (* Must be at least two *)
-
-type ('k, 'v) nt =
-  Br of 'k * ('k, 'v) nt list * 'k
-| Lf of 'k * ('k * 'v) list * 'k
-
-let left l = fst (hd l)
-let right l = fst (last l)
-
-let rec build_nt_tree l =
-  if length l = 0 then assert false;
-  if length l <= maxsize
-    then Lf (left l, l, right l)
-    else Br (left l, map build_nt_tree (splitinto (length l / maxsize) l), right l)
-
-let rec name_tree_of_nt isnum isroot pdf = function
-  Lf (llimit, items, rlimit) ->
-    let entry =
-      [((if isnum then "/Nums" else "/Names"),
-        Pdf.Array (flatten (map (fun (k, v) -> [(if isnum then Pdf.Integer (int_of_string k) else Pdf.String k); v]) items)))] 
-    in
-    let ll, rl =
-      if isnum
-        then Pdf.Integer (int_of_string llimit), Pdf.Integer (int_of_string rlimit)
-        else Pdf.String llimit, Pdf.String rlimit
-    in
-      Pdf.Dictionary
-        (entry @
-         if isroot then [] else [("/Limits", Pdf.Array [ll; rl])])
-| Br (llimit, nts, rlimit) ->
-    let indirects =
-      let kids = map (name_tree_of_nt isnum false pdf) nts in
-        map (Pdf.addobj pdf) kids
-    in
-    let ll, rl =
-      if isnum
-        then Pdf.Integer (int_of_string llimit), Pdf.Integer (int_of_string rlimit)
-        else Pdf.String llimit, Pdf.String rlimit
-    in
-      Pdf.Dictionary
-       [("/Kids", Pdf.Array (map (fun x -> Pdf.Indirect x) indirects));
-        ("/Limits", Pdf.Array [ll; rl])]
-
-let build_name_tree isnum pdf = function
-  | [] ->
-      if isnum then
-        Pdf.Dictionary [("/Nums", Pdf.Array [])]
-      else
-        Pdf.Dictionary [("/Names", Pdf.Array [])]
-  | ls ->
-      let nt = build_nt_tree (sort compare ls) in
-        name_tree_of_nt isnum true pdf nt
-
 (* Once we know there are no clashes *)
 let merge_name_trees_no_clash pdf trees =
-  build_name_tree false pdf (flatten (map (read_name_tree pdf) trees))
+  Pdftree.build_name_tree false pdf (flatten (map (Pdftree.read_name_tree pdf) trees))
 
 let merge_number_trees_no_clash pdf trees =
-  build_name_tree true pdf (flatten (map (read_number_tree pdf) trees))
+  Pdftree.build_name_tree true pdf (flatten (map (Pdftree.read_number_tree pdf) trees))
 
 (* Merging entries in the Name Dictionary. [pdf] here is the new merged pdf, [pdfs] the original ones. *)
 let merge_namedicts pdf pdfs =
@@ -237,14 +146,14 @@ let merge_bookmarks changes pdfs ranges pdf =
       let catalog = Pdf.catalog_of_pdf pdf in
         let oldstyle =
           match Pdf.lookup_direct pdf "/Dests" catalog with
-          | Some d -> read_name_tree pdf d
+          | Some d -> Pdftree.read_name_tree pdf d
           | _ -> []
         in
         let newstyle =
           match Pdf.lookup_direct pdf "/Names" catalog with
           | Some d ->
               begin match Pdf.lookup_direct pdf "/Dests" d with
-              | Some d -> read_name_tree pdf d
+              | Some d -> Pdftree.read_name_tree pdf d
               | _ -> []
               end
           | _ -> []
@@ -490,7 +399,7 @@ let merge_pdfs_rename_name_trees names pdfs =
   let names =
     map
       (function
-       | (pdf, Some nametree) -> (pdf, map fst (read_name_tree pdf nametree))
+       | (pdf, Some nametree) -> (pdf, map fst (Pdftree.read_name_tree pdf nametree))
        | (pdf, None) -> (pdf, []))
       pdfs_and_nametrees
   in
